# vulkan-hpp-tutorial

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.diff  mkdocs.yml
.github/workflows/: deploy.yml
cmake/: VulkanHppModule.cmake
docs/: index.md  policy.md  todo.md
docs/codes/00/01_env/: CMakeLists.txt  CMakePresets.json  main.cpp
docs/codes/0100_base/: main.cpp
docs/codes/0101_instance/: main.cpp  main.diff
docs/codes/0102_validation/: main.cpp  main.diff
docs/codes/0103_physicaldevice/: main.cpp  main.diff
docs/codes/0104_device/: main.cpp  main.diff
docs/codes/0110_surface/: main.cpp  main.diff
docs/codes/0111_swapchain/: main.cpp  main.diff
docs/codes/0112_imageview/: main.cpp  main.diff
docs/codes/0120_pipeline/: main.cpp  main.diff
docs/codes/0121_shader/: main.cpp  main.diff
docs/codes/0122_fixfunction/: main.cpp  main.diff
docs/codes/0123_renderpass/: main.cpp  main.diff
docs/codes/0124_conclusion/: main.cpp  main.diff
docs/codes/0130_framebuffer/: main.cpp  main.diff
docs/codes/0131_commandbuffer/: main.cpp  main.diff
docs/codes/0132_rendering/: main.cpp  main.diff
docs/codes/0133_flightframe/: main.cpp  main.diff
docs/codes/0140_recreateswapchain/: main.cpp  main.diff
docs/codes/0200_vertexinput/: CMakeLists.txt  main.cpp  main.diff
docs/codes/0201_vertexbuffer/: main.cpp  main.diff
docs/codes/0202_stagingbuffer/: main.cpp  main.diff
docs/codes/0203_indexbuffer/: main.cpp  main.diff
docs/codes/03/40_instancedrendering/: CMakeLists.txt  main.cpp  main.diff
docs/codes/03/40_instancedrendering/shaders/: frag.diff  graphics.frag.diff  graphics.frag.glsl  graphics.vert.diff  graphics.vert.glsl  shader.frag  shader.vert  vert.diff
docs/codes/03/80_compute/shaders/: CMakeLists.txt  compute.comp.glsl
docs/codes/03/90_compute/shaders/: CMakeLists.diff  CMakeLists.txt  shader.comp
docs/codes/0300_descriptor1/: main.cpp  main.diff
docs/codes/0301_descriptor2/: main.cpp  main.diff
docs/codes/04/00_cxxmodule/: CMakeLists.txt
docs/codes/04/00_cxxmodule/src/: main.cpp
docs/codes/04/20_shadowmap/shaders/: CMakeLists.diff  CMakeLists.txt  frag.diff  shader.frag
docs/codes/04/21_deferred/shaders/: CMakeLists.diff  CMakeLists.txt  second.vert  shader.frag  shader.vert
docs/codes/0400_texture/: main.cpp  main.diff
docs/codes/0401_sampler/: main.cpp
docs/codes/0402_combined/: CMakeLists.txt  main.cpp  main.diff
docs/codes/0500_depthbuffer/: main.cpp
docs/codes/0600_loadmodel/: main.cpp  main.diff
docs/codes/0700_mipmaps/: main.cpp  main.diff
docs/codes/0800_multisample/: main.cpp  main.diff
docs/custom/css/: style.css
docs/custom/partials/: comments.html
docs/md/: 0000_intro.md  0001_env.md  0001_overview.md  0002_diff.md  0002_env.md  0003_diff.md  0100_base.md  0101_instance.md  0102_validation.md  0103_physicaldevice.md  0104_device.md  0110_surface.md  0111_swapchain.md  0112_imageview.md  0120_pipeline.md  0121_shader.md  0122_fixfunction.md  0123_renderpass.md  0124_conclusion.md  0130_framebuffer.md  0131_commandbuffer.md  0132_rendering.md  0133_flightframe.md  0140_recreateswapchain.md  0200_vertexinput.md  0201_vertexbuffer.md  0202_stagingbuffer.md  0203_indexbuffer.md  0300_descriptor1.md  0301_descriptor2.md  0400_texture.md  0401_sampler.md  0402_combined.md  0500_depthbuffer.md  0600_loadmodel.md  0700_mipmaps.md  0800_multisample.md
docs/md/00/: 00_intro.md  01_env.md  02_diff.md
docs/md/01/: 00_base.md  01_instance.md  02_validation.md  03_physicaldevice.md  04_device.md  10_surface.md  11_swapchain.md  12_imageview.md  13_renderpass.md  14_framebuffer.md  20_pipeline.md  21_shader.md  22_fixfunction.md  23_conclusion.md  23_renderpass.md  24_conclusion.md  30_commandbuffer.md  30_framebuffer.md  31_commandbuffer.md  31_rendering.md  32_flightframe.md  32_rendering.md  33_flightframe.md  33_recreateswapchain.md  40_recreateswapchain.md
docs/md/02/: 00_vertexinput.md  01_vertexbuffer.md  02_stagingbuffer.md  10_indexbuffer.md  20_descriptor1.md  21_descriptor2.md  30_texture.md  31_sampler.md  32_combined.md  40_depthbuffer.md
docs/md/03/: 00_loadmodel.md  10_mipmaps.md  10_movecamera.md  20_mipmaps.md  20_multisample.md  30_movecamera.md  30_multisample.md  40_instancedrendering.md  40_pushconstant.md  50_dynamicuniform.md  50_pushconstant.md  60_dynamicuniform.md  70_separatesampler.md  80_compute.md  80_pipelinecache.md  90_compute.md
docs/md/04/: 00_cxxmodule.md  10_querypool.md  10_specialization.md  11_pipelinecache.md  11_specialization.md  12_pnext_stype.md  13_sync2.md  14_querypool.md  15_shaderc.md  20_imageless.md  20_multisubpass.md  20_multithreading.md  20_querypool.md  20_shadowmap.md  21_dynamicrendering.md  21_imageless.md  21_resourceloading.md  22_dynamicrendering.md  30_geometry.md  30_other.md  30_shadowmap.md  31_deferred.md  31_tessellation.md  32_stenciltest.md  32_taskmesh.md  40_multipipeline.md  41_deferred.md  50_offscreen.md  51_separateframebuffer.md  60_acceleration.md  61_raytracing.md  62_raytracingshader.md  63_raytracinginstance.md  70_memorymgmt.md  71_barriers.md  72_multiqueue.md  80_pipelinecache.md  80_sharedmemory.md  81_asynccompute.md  82_atomics.md  (+1 more)
shaders/: CMakeLists.txt  graphics.frag.glsl  second.frag  shader.frag  shadow.vert
src/: App.cppm  Config.cppm  main.cpp
src/third/: glfw.cppm  glm.cppm  shaderc.cppm  stbi.cppm  tinyobj.cppm
src/utils/: CommandPool.cppm  Context.cppm  DataLoader.cppm  DepthImage.cppm  Descriptor.cppm  Device.cppm  Drawer.cppm  GBuffer.cppm  GraphicsPipeline.cppm  InputAssembly.cppm  LightUBO.cppm  RenderPass.cppm  ShadowDepthImage.cppm  ShadowPipeline.cppm  ShadowRenderPass.cppm  SwapChain.cppm  TextureSampler.cppm  UniformBuffer.cppm  Utility.cppm  Window.cppm
src/vht/: App.cppm  CommandPool.cppm  Config.cppm  Context.cppm  DataLoader.cppm  DepthImage.cppm  Descriptor.cppm  Device.cppm  Drawer.cppm  GraphicsPipeline.cppm  InputAssembly.cppm  RenderPass.cppm  Swapchain.cppm  TextureSampler.cppm  Tools.cppm  UniformBuffer.cppm  Window.cppm
(+211 files in other folders)
